# sqlx-meta

./: Cargo.toml  README.md
sqlx-meta/: Cargo.toml
sqlx-meta/sqlx-meta-macros/: Cargo.toml
sqlx-meta/sqlx-meta-macros/src/: lib.rs
sqlx-meta/src/: lib.rs  schema.rs  traits.rs
