[package]
name = "sqlx-meta-macros"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/rusty-ferris-club/sqlx-meta"
documentation = "https://docs.rs/sqlx-meta"
description = "Proc macro implemtation for sqlx-meta to implement metadata reading"
license = "MIT"
keywords = ["sqlx", "orm", "database"]
categories = ["database", "asynchronous", "web-programming"]
authors = [
  "Dotan Nahum <dotan@rng0.io>",
  "Trey Dempsey <trey.dempsey@gmail.com>",
]

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
